# sample_project

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
core/: CMakeLists.txt  Dockerfile  conanfile.txt
core/apps/: CMakeLists.txt  main_app.cpp
core/cmake/: Proto.cmake
core/config/: config.yaml
core/modules/network/: CMakeLists.txt
core/modules/network/include/: queue.hpp
core/modules/network/src/: queue.cpp
core/proto/: transport.proto
gateway/: envoy.yml  nginx.conf
